--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "commander": "^8.2.0",
-    "cross-var": "^1.1.0",
+    "cross-var-no-babel": "^1.2.0",
     "csv-parser": "^3.0.0",
     "dayjs": "^1.11.7",
     "epg-grabber": "^0.31.0",
